--- a/lw2/Queue/Queue.vcxproj
+++ b/lw2/Queue/Queue.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Queue.cpp" />
+    <ClCompile Include="QueueModuleImplementaion.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="QueueModuleInterface.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
