--- a/lw3/Stack/Stack.vcxproj
+++ b/lw3/Stack/Stack.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Stack.cpp" />
+    <ClCompile Include="StackModuleImplementation.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="StackModuleInterface.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
