--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(algorithms_and_data_structures)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(algorithms_and_data_structures
-        iSpring/lw1/task_26.cpp)
+        iSpring/lw1/task_26.cpp
+)
