--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,7 @@ project(algorithms_and_data_structures)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(algorithms_and_data_structures
-        Institute/lw1/task_26.cpp)
+add_executable(
+        algorithms_and_data_structures
+        Institute/lw1/task_28.cpp
+)
