--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,7 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(
         algorithms_and_data_structures
+        Institute/lw1/task_23.cpp
         Institute/lw1/task_28.cpp
+        Institute/lw2/task_18.cpp
 )
